src/terraform/modules/services/messaging/rabbitmq/templates/ingress-direct.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: rabbitmq
  namespace: ${namespace}
spec:
  entryPoints:
    - rabbitmq
  routes:
  - kind: Rule
    match: HostSNI(`*`)
    services:
    - name: rabbitmq-cluster
      port: 5672
